# cpp-labs-SUAI

./: README.md
lab1/: CMakeLists.txt  README.md
lab1/include/: element.h  menu.h  queue.h  queue1.h  queue_processing.h  secondary_functions.h
lab1/src/: element.cc  main.cc  menu.cc  queue.cc  queue1.cc  queue_processing.cc  secondary_functions.cc
lab2/: CMakeLists.txt  README.md
lab2/include/: menu.h  mydouble.h  mydouble_processing.h  secondary_functions.h  stack.h  stack_processing.h
lab2/src/: main.cc  menu.cc  mydouble.cc  mydouble_processing.cc  secondary_functions.cc  stack.cc  stack_processing.cc
lab3/: .clang-format  CMakeLists.txt  README.md
lab3/data/: input.txt  output.txt
lab3/include/: dollar.h  euro.h  exchange_processing.h  file_processing.h  menu.h  pound.h  ruble.h  secondary_functions.h  yen.h
lab3/src/: dollar.cc  euro.cc  exchange_processing.cc  file_processing.cc  main.cc  menu.cc  pound.cc  ruble.cc  secondary_functions.cc  yen.cc
lab4/: .clang-format  CMakeLists.txt  README.md
lab4/include/: array_processing.h  array_processing.tpp  menu_array.h  secondary_functions.h
lab4/src/: main.cc  menu_array.cc  secondary_functions.cc
